<resources>
    <string name="app_name">In Class Assignments</string>
    <string name="practice_titile">Practice</string>
    <string name="logCatTitle">Log Cat</string>
    <string name="toastButtonTitle">Toast</string>
    <string name="InClass1Title">In Class 01</string>
    <string name="InClass2Title">In Class 02</string>
    <string name="InClass3Title">In Class 03</string>
    <string name="buttonCalculateBmiText">Calculate BMI</string>
    <string name="submitText">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InClass04Title">In Class 04</string>
    <string name="GenerateNumberButtonTitle">Generate Number</string>
    <string name="InClass05Title">In Class 05</string>
    <string name="ButtonGo">Go</string>
    <string name="InClass06Title">In Class 06</string>
    <string name="InClass07Title">In Class 07</string>
    <string name="ButtonLogin">Log In</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="ButtonBack">Back</string>
    <string name="buttonViewNotes">View Notes</string>
    <string name="buttonLogout">Log Out</string>
    <string name="buttonDeleteNote">Delete</string>
    <string name="buttonAddNote">Add Note</string>
    <string name="InClass08Title">In Class 08</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonSend">Send</string>
    <string name="buttonBackToChatList">Back</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonEditProfile">Profile</string>
    <string name="buttonImage">Gallery</string>
    <string name="buttonCamera">Camera</string>
</resources>